--- a/lib/nimbula.conf
+++ b/lib/nimbula.conf
@@ -10,6 +10,8 @@ apiClient=nimbula-api
 user=/root/root
 passwd=OracleCloud9
 passFile=/tmp/nimbulaPasswdFile_root_root
-storage_address=192.6.64.254
+#storage_address=192.6.64.254
+storage_address=10.128.72.20
 nfs_share=/storage
+iscsi_project=ning_iscsi
 imagelist=/oracle/public/oel6
